--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,11 +3,10 @@ name: Docker Image Build and Push - CI Workflow
 on:
   push:
     branches:
-      # master handles: "latest"; and tags "minimal" and "alpine-minimal"
-      - master
+      # master handles: "latest"; and tags "alpine"
+      - main
     tags:
-      - minimal
-      - alpine-minimal
+      - alpine
 
 jobs:
   build-and-push-muti-arch-docker-image:
@@ -31,11 +30,11 @@ jobs:
           SHORT_REF=$(basename ${GITHUB_REF})
           SHORT_HASH=${GITHUB_SHA::7}
           TAGS=""
-          if [[ ! -z "${SHORT_REF}" && "${SHORT_REF}" == "master" ]]; then 
-            echo "Found git commit on master branch. Setting docker image tag as: 'latest'" 
+          if [[ ! -z "${SHORT_REF}" && "${SHORT_REF}" == "main" ]]; then 
+            echo "Found git commit on main branch. Setting docker image tag as: 'latest'" 
             TAG=${DOCKERHUB_ORGNAME}/${DOCKER_IMAGE}:latest
           fi  
-          if [[ ! -z "${SHORT_REF}" && "${SHORT_REF}" != "master" ]]; then 
+          if [[ ! -z "${SHORT_REF}" && "${SHORT_REF}" != "main" ]]; then 
             echo "Setting docker image tag as: '${SHORT_REF}'" 
             TAG=${DOCKERHUB_ORGNAME}/${DOCKER_IMAGE}:${SHORT_REF}
           fi
